# ai-chatter

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: docs.yml  publish-test.yml  publish.yml
docs/: conf.py  index.rst
docs/_templates/: class.rst  function.rst  module.rst  template.rst
src/ai_chatter/: __about__.py  __init__.py  enums.py  scripts.py
src/ai_chatter/apps/: __init__.py  base.py  chat.py  howto.py  web.py
src/ai_chatter/communication/: __init__.py  base.py  cli.py
src/ai_chatter/db/: __init__.py  base.py  chat.py
src/ai_chatter/utils/: config.py
tests/assets/configs/: full.json  invalid.json  no_api_key.json  sparse.json
